samples/_failures_safe/1761507164_4096aa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09c863d8.c: In function ‘tokenize_next’:
./samples/SAFE/__tmp_09c863d8.c:167:34: error: expected ‘)’ at end of input
  167 |         if (!read_number(t, token
      |                         ~        ^
      |                                  )
./samples/SAFE/__tmp_09c863d8.c:167:9: error: expected declaration or statement at end of input
  167 |         if (!read_number(t, token
      |         ^~
./samples/SAFE/__tmp_09c863d8.c:167:9: error: expected declaration or statement at end of input
